# fake-flames

./: .coveragerc  .gitignore  LICENSE.rst  README.rst  pyproject.toml
fake_flames/data_loaders/: read_fire_sfh.py
fake_flames/data_loaders/tests/: test_read_fire_sfh.py
fake_flames/tests/testing_data/: data_m12f.npz
